# cricketprediction

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  combinecsv.py  cricket_score_predictor.h5  dataprocessing.ipynb  environment.yml  neuralnet.ipynb  othermodels.ipynb  predictor.py  pyproject.toml
other/: model_architecture.json  model_weights.h5
src/app/: main.py  predictor.py  schemas.py  utils.py
src/models/: dataprocessing.ipynb  neuralnet.ipynb  othermodels.ipynb
src/models/model_files/: cricket_score_predictor_v2.keras  scaler.pkl  scaler_v2.pkl
src/utils/: combinecsv.py
static/: index.html  script.js  styles.css
